# Tracecore

./: .gitignore  .windsurfignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPENCLAW_QUICKSTART.md  README.md  SECURITY.md  SPEC_FREEZE.md  agent-bench.toml  agents.md  context7.json  pyproject.toml  roadmap.md  run.json  run_chain.json  runbook_verifier_budget_diff.json  runs_report.md  tracecore-agents.code-workspace
.agent_bench/baselines/: baseline-20260212-231043.json  latest.json  rate_limited_chain_chain_agent.json
.github/: pull_request_template.md
.github/workflows/: baseline-compare.yml  chain-agent-baseline.yml  ci.yml  langchain-example-ci.yml  nightly-distributed-acceptance.yml  nightly.yml  reference-plugin-ci.yml  release.yml  tests.yml  tracecore-ci.yml
.tmp/maintainer_demo/: needs_fix_pydantic_import.py
.windsurf/rules/: testing.md
.windsurf/workflows/: changelog.md  context-hub-api-docs.md  release.md  testing.md  update-docs.md  venv.md
agent_bench/: __init__.py  cli.py  config.py  interactive.py  leaderboard.py  maintainer.py  openclaw.py  pairings.py  session.py
agent_bench/agent/: __init__.py  interface.py  loader.py
agent_bench/agents/: cheater_agent.py  multi_agent_orchestrator.py  multi_role_ops_agent.py  naive_llm_agent.py  ops_triage_agent.py  planner_agent.py  sandboxed_code_auditor_agent.py
agent_bench/env/: __init__.py  environment.py  hidden_state.py
agent_bench/integrations/: README.md  __init__.py  _task_helpers.py  autogen_adapter.py  langchain_adapter.py  llm_shims.py  llm_telemetry.py
agent_bench/judging/: __init__.py  reasoning.py
agent_bench/ledger/: __init__.py  manifest.schema.json  pubkey.pem  registry.json  signing.py
agent_bench/runner/: __init__.py  baseline.py  batch.py  bundle.py  episode_config.py  export_otlp.py  failures.py  isolation.py  metrics.py  migration.py  replay.py  results.py  runlog.py  runner.py  spec_check.py
agent_bench/spec/: artifact-schema-v0.1.json  artifact-schema-v1.0.json  tracecore-spec-v0.1.md
agent_bench/tasks/: __init__.py  loader.py  registry.py
agent_bench/telemetry/: __init__.py  llm_trace.py
agent_bench/webui/: app.py
agents/: README.md  autogen_rate_limit_agent.py  chain_agent.py  dice_game_agent.py  log_stream_monitor_agent.py  pydantic_ai_agent.py  rate_limit_agent.py  runbook_verifier_agent.py  toy_agent.py
ci/templates/: github-record-replay.yml  gitlab-record-replay.yml
deliverables/leaderboard/: README.md  design.md  schema.md
deliverables/trust_bundle_v0.6.0/: latest.json  metadata.json
deliverables/trust_bundle_v0.7.0/: metadata.json  run_3dbba411_filesystem_hidden_config.json
deliverables/trust_bundle_v0.8.0/: metadata.json
deliverables/trust_bundle_v0.9.0/: baseline_latest.json  filesystem_hidden_config@1.json  log_alert_triage@1.json  metadata.json  rate_limited_api@1.json  rate_limited_chain@1.json
docs/: agent_interface.md  agents.md  architecture.md  awesome-certified.code-workspace  ci_workflow.md  contract_spec.md  core.md  faq.md  index.md  ledger.md  llm_telemetry.md  manual_verification.md  plugin_contribution_guide.md  project_positioning.md  pydantic_poc.md  record_mode.md  release_process.md  runner.md  task_harness.md  task_manifest.md  task_plugin_template.md  tasks.md  trace_artifacts.md  tracecore_spec.md  troubleshooting.md  whats_new_v1.md
docs/agents/: agents.md
docs/ci/: ci-workflows.md  ci_workflow.md
docs/cli/: commands.md  maintainer.md  tool_shim.md  troubleshooting.md
docs/contributing/: external_contributor_onboarding.md
docs/governance/: ledger.md  ledger_governance.md  signing_key_rotation_guide.md
docs/operations/: artifact_migration_playbook.md  debugging_playbook.md  manual_verification.md  performance_baselines.md  record_mode.md  release_process.md
docs/reference/: architecture.md  faq.md  pydantic_poc.md
docs/specs/: contract.md  core.md  trace_artifacts.md
examples/: run_toy_agent.sh  sample_output.json  tracecore_quickstart.ipynb
examples/reference_task_plugin/: README.md  pyproject.toml
examples/reference_task_plugin/tracecore_reference_task_plugin/: __init__.py
examples/reference_task_plugin/tracecore_reference_task_plugin/tasks/reference_echo_task/: actions.py  setup.py  task.toml  validate.py
notebooks/: record_mode_colab_demo.ipynb
openclaw_bench/: __init__.py  cli.py
scripts/: perf_harness.py  policy_gate.py
spec/: compliance-checklist-v0.1.md  determinism.md  episode-config-schema-v1.0.json  tracecore-spec-v1.0.md
tasks/: README.md  __init__.py  registry.json
tests/: test_action_contracts.py  test_agent_contract.py  test_agent_discovery.py  test_autogen_adapter.py  test_baseline.py  test_baseline_diff_pretty.py  test_bundle_audit.py  test_bundle_signing.py  test_chain_agent_runner.py  test_cli_baseline.py  test_cli_bundle.py  test_cli_leaderboard.py  test_cli_new_agent.py  test_cli_openclaw.py  test_cli_runs.py  test_cli_runs_migrate.py  test_cli_tasks_validate.py  test_cli_verify.py  test_config.py  test_determinism.py  test_deterministic_rate_service_task.py  test_dice_game_agent.py  test_dice_game_pydantic.py  test_diff_cmd.py  test_diff_contracts.py  test_episode_config.py  test_export_otlp.py  test_hosted_llm_integrations.py  test_inspect_cli.py  test_interactive_cli.py  test_langchain_adapter.py  test_langchain_example.py  test_leaderboard.py  test_ledger_signing.py  test_llm_telemetry_module.py  test_maintainer.py  test_multi_agent_orchestrator.py  test_naive_llm_agent.py  test_negative_cases.py  test_openai_assistants_example.py  (+28 more)
tutorials/: autogen_quickstart.md  openclaw_quickstart.md  pydantic_ai_quickstart.md
(+182 files in other folders)
