[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bench"
version = "0.6.0"
description = "A lightweight benchmark for action-oriented agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]
pydantic_poc = [
    "pydantic-ai>=0.0.3,<1.0",
]

[project.scripts]
agent-bench = "agent_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = [
    "tests",
    "tasks",
    "examples",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_bench",
    "tasks",
    "tasks.*",
]
