[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tracecore"
version = "1.1.2"
authors = [{ name = "Justin Dobbs" }]
description = "A lightweight benchmark for action-oriented agents."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "rich>=13.7",
    "fastapi>=0.131",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "cryptography>=42",
    "pydantic>=2.7",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "httpx>=0.27",
]
pydantic_poc = [
    "pydantic-ai>=1.66.0,<2.0",
]
openai_agents = [
    "openai-agents>=0.10.4",
]

[project.scripts]
agent-bench = "agent_bench.cli:main"
tracecore = "agent_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "none"
markers = [
    "integration: opt-in integration tests that may require external services or credentials",
]


[tool.ruff]
line-length = 120
extend-exclude = [
    "tests",
    "tasks",
    "examples",
    ".pytest_tmp",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_bench",
    "agent_bench.*",
    "tasks",
    "tasks.*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"tasks" = [
    "registry.json",
    "**/task.toml",
    "**/task.yaml",
    "**/manifest.json",
]
"agent_bench.webui" = [
    "templates/*.html",
]
"agent_bench.ledger" = [
    "registry.json",
    "manifest.schema.json",
    "pubkey.pem",
]
"agent_bench.agents" = [
    "*.py",
]
"agent_bench" = [
    "spec/*.json",
    "spec/*.md",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[project.urls]
Homepage = "https://github.com/justindobbs/Tracecore"
Issues = "https://github.com/justindobbs/Tracecore/issues"
